sellpy-menu-lists 까지 완료

--- a/index.html
+++ b/index.html
@@ -6,19 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./img/favicon.png" type="image/png">
+    <link rel="stylesheet" href="./css/main.css" type="text/css">
     <title>Sellpy-renewal</title>
 </head>
 
 <body>
-    <ul class="util-lists">
-        <li><a href="#">회원가입</a></li>
-        <li><a href="#">로그인</a></li>
-        <li><a href="#"><img src="./img/cart.png" alt="cart">장바구니</a></li>
-    </ul>
+
+    <div class="util-lists-wrap">
+        <ul class="util-lists">
+            <li><a href="#">회원가입</a></li>
+            <li><a href="#">로그인</a></li>
+            <li><a href="#"><img src="./img/cart.png" alt="cart"></a></li>
+            <li><a href="#">장바구니</a></li>
+            <div class="util-lists-bg"></div>
+        </ul>  
+    </div>
 
     <section class="sellpy-menu">
         <h1><img src="./img/sellpylogo.png" alt="logo"></h1>
-        <ul class="navi-lists">
+        <ul class="sellpy-menu-lists">
             <li><a href="#">MENS</a></li>
             <li><a href="#">WOMENS</a></li>
             <li><a href="#">THE BRAND</a></li>
@@ -26,6 +32,8 @@
             <li><a href="#">LOOK BOOK</a></li>
         </ul>
     </section>
+
+
     <section class="sellpy-mainvisual">
         <h2>
             OUT WITH THE OLD,<br>
