--- a/index.html
+++ b/index.html
@@ -35,16 +35,21 @@
 
 
     <section class="sellpy-mainvisual">
-        <h2>
-            OUT WITH THE OLD,<br>
-            IN WITH THE NEW OLD.
-        </h2>
-        <p>
-            더 나은 지구를 위한 지속 가능한 실천 <br>
-            SELLPY와 함께하세요
-        </p>
-
-        <button>여성복 쇼핑하기</button>
+        <img src="./img/mainvisual.png" alt="mainVisual">
+        <div class="sellpy-mainvisual-desc">
+            <div class="sellpy-mainvisual-desc-title">
+                <h2>
+                    OUT WITH THE OLD,<br>
+                    IN WITH THE NEW OLD.
+                </h2>
+                <div class="sellpy-desc-redline"></div>
+            </div>
+            <p>
+                더 나은 지구를 위한 지속 가능한 실천 <br>
+                SELLPY와 함께하세요
+            </p>
+            <button>여성복 쇼핑하기</button>
+        </div>
     </section>
 
     <section class="sellpy-products">
