--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
 
     <section class="sellpy-mainvisual">
+        
         <img src="./img/mainvisual.png" alt="mainVisual">
         <div class="sellpy-mainvisual-desc">
             <div class="sellpy-mainvisual-desc-title">
@@ -52,17 +53,18 @@
         </div>
     </section>
 
-    <section class="sellpy-products">
+    <section class="sellpy-contents">
         <!-- grid배우고 만들기 -->
-        
-        <div>
-            <a href=#"><img src="./img/img1.png" alt="img1"></a>
-            <a href=#"><img src="./img/img2.png" alt="img2"></a>
-            <a href=#"><img src="./img/img3.png" alt="img3"></a>
-            <a href=#"><img src="./img/img4.png" alt="img4"></a>
-            <a href=#"><img src="./img/img5.png" alt="img5"></a>
-            <a href=#"><img src="./img/img6.png" alt="img6"></a>
+        <div class="gray-line"></div>
+        <div class="sellpy-contents-wrap">
+            <div class="sellpy-content"><a href=#"><img src="./img/img1.png" alt="img1"></a></div>
+            <div class="sellpy-content"><a href=#"><img src="./img/img2.png" alt="img2"></a></div>
+            <div class="sellpy-content"><a href=#"><img src="./img/img3.png" alt="img3"></a></div>
+            <div class="sellpy-content"><a href=#"><img src="./img/img4.png" alt="img4"></a></div>
+            <div class="sellpy-content"><a href=#"><img src="./img/img5.png" alt="img5"></a></div>
+            <div class="sellpy-content"><a href=#"><img src="./img/img6.png" alt="img6"></a></div>
         </div>
+        <div class="gray-line"></div>
     </section>
 
     <section class="sellpy-lookbook">
