--- a/index.html
+++ b/index.html
@@ -104,69 +104,55 @@
     </section>
 
     <footer class="sellpy-footer">
-        <ul>
-            <li><a href="#">ABOUT US</a>
-                <ul>
-                    <li><a href="#">회사소개</a></li>
-                    <li><a href="#">인재채용</a></li>
-                    <li><a href="#">상시할인혜택</a></li>
-                </ul>
-            </li>
-        </ul>
-
-        <ul>
-            <li><a href="#">ABOUT US</a>
-                <ul>
-                    <li><a href="#">회사소개</a></li>
-                    <li><a href="#">인재채용</a></li>
-                    <li><a href="#">상시할인혜택</a></li>
-                </ul>
-            </li>
-
-            <li><a href="#">MY ORDER</a>
-                <ul>
-                    <li><a href="#">주문배송</a></li>
-                    <li><a href="#">취소/교환/반품내역</a></li>
-                    <li><a href="#">상품리뷰내역</a></li>
-                    <li><a href="#">증빙서류발급</a></li>
-                </ul>
-            </li>
-
-            <li><a href="#">MY ACCOUNT</a>
-                <ul>
-                    <li><a href="#">회원정보수정</a></li>
-                    <li><a href="#">회원등급</a></li>
-                    <li><a href="#">마일리지현황</a></li>
-                    <li><a href="#">쿠폰</a></li>
-                </ul>
-            </li>
-
-            <li><a href="#">HELP</a>
-                <ul>
-                    <li><a href="#">1:1상담내역</a></li>
-                    <li><a href="#">상품Q&A내역</a></li>
-                    <li><a href="#">공지사항</a></li>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">고객의소리</a></li>
-                </ul>
-            </li>
-
-            <li><a href="#">CONTACT DETAILS</a>
-                <ul>
-                    <li><a href="#">© Sellhelp AB |
-                        Frihamnsgatan 56, 115 56 Stockholm</a></li>
-                    <li><a href="#">tel:010-1234-1234</a></li>
-                    <li><a href="#">company@sellpy.com</a></li>
-                </ul>
-            </li>
+        <div class="sellpy-footer-inner">
+            <ul class="sellpy-footer-lists">
+                <li><a href="#">ABOUT US</a>
+                    <ul>
+                        <li><a href="#">회사소개</a></li>
+                        <li><a href="#">인재채용</a></li>
+                        <li><a href="#">상시할인혜택</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">MY ORDER</a>
+                    <ul>
+                        <li><a href="#">주문배송</a></li>
+                        <li><a href="#">취소/교환/반품내역</a></li>
+                        <li><a href="#">상품리뷰내역</a></li>
+                        <li><a href="#">증빙서류발급</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">MY ACCOUNT</a>
+                    <ul>
+                        <li><a href="#">회원정보수정</a></li>
+                        <li><a href="#">회원등급</a></li>
+                        <li><a href="#">마일리지현황</a></li>
+                        <li><a href="#">쿠폰</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">HELP</a>
+                    <ul>
+                        <li><a href="#">1:1상담내역</a></li>
+                        <li><a href="#">상품Q&A내역</a></li>
+                        <li><a href="#">공지사항</a></li>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">고객의소리</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">CONTACT DETAILS</a>
+                    <ul>
+                        <li><a href="#">© Sellhelp AB |
+                            Frihamnsgatan 56, 115 56 Stockholm</a></li>
+                        <li><a href="#">tel:010-1234-1234</a></li>
+                        <li><a href="#">company@sellpy.com</a></li>
+                    </ul>
+                </li>
+            </ul>
 
             <div class="sellpy-sns">
                 <a href="#"><img src="./img/twitter.png" alt="Twitter"></a>
                 <a href="#"><img src="./img/yotube.png" alt="youtube"></a>
             </div>
-        </ul>
-
-
+        </div>
     </footer>
 </body>
 
