--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li><a href="#"><img src="./img/cart.png" alt="cart"></a></li>
             <li><a href="#">장바구니</a></li>
             <div class="util-lists-bg"></div>
-        </ul>  
+        </ul>
     </div>
 
     <section class="sellpy-menu">
@@ -35,16 +35,16 @@
 
 
     <section class="sellpy-mainvisual">
-        
-        <img src="./img/mainvisual.png" alt="mainVisual">
+        <div class="sellpy-mainvisual-img">
+            <img src="./img/mainvisual.png" alt="mainVisual">
+        </div>
+
         <div class="sellpy-mainvisual-desc">
-            <div class="sellpy-mainvisual-desc-title">
-                <h2>
-                    OUT WITH THE OLD,<br>
-                    IN WITH THE NEW OLD.
-                </h2>
-                <div class="sellpy-desc-redline"></div>
-            </div>
+            <h2>
+                OUT WITH THE OLD,<br>
+                IN WITH THE NEW OLD.
+            </h2>
+            <div class="sellpy-desc-redline"></div>
             <p>
                 더 나은 지구를 위한 지속 가능한 실천 <br>
                 SELLPY와 함께하세요
@@ -54,15 +54,23 @@
     </section>
 
     <section class="sellpy-contents">
-        <!-- grid배우고 만들기 -->
         <div class="gray-line"></div>
         <div class="sellpy-contents-wrap">
-            <div class="sellpy-content"><a href=#"><img src="./img/img1.png" alt="img1"></a></div>
-            <div class="sellpy-content"><a href=#"><img src="./img/img2.png" alt="img2"></a></div>
-            <div class="sellpy-content"><a href=#"><img src="./img/img3.png" alt="img3"></a></div>
-            <div class="sellpy-content"><a href=#"><img src="./img/img4.png" alt="img4"></a></div>
-            <div class="sellpy-content"><a href=#"><img src="./img/img5.png" alt="img5"></a></div>
-            <div class="sellpy-content"><a href=#"><img src="./img/img6.png" alt="img6"></a></div>
+            <div class="sellpy-content-divide">
+                <div class="sellpy-content contentup">
+                    <div class="sellpy-content"><a href=#"><img src="./img/img1.png" alt="img1"></a></div>
+                    <div class="sellpy-content"><a href=#"><img src="./img/img2.png" alt="img2"></a></div>
+                </div>
+                <div class="sellpy-content up"><a href=#"><img src="./img/img3.png" alt="img3"></a></div>
+            </div>
+
+            <div class="sellpy-content-divide">
+                <div class="sellpy-content"><a href=#"><img src="./img/img4.png" alt="img4"></a></div>
+                <div class="sellpy-content contentup up">
+                    <div class="sellpy-content"><a href=#"><img src="./img/img5.png" alt="img5"></a></div>
+                    <div class="sellpy-content"><a href=#"><img src="./img/img6.png" alt="img6"></a></div>
+                </div>
+            </div>
         </div>
         <div class="gray-line"></div>
     </section>
@@ -141,7 +149,7 @@
                 <li><a href="#">CONTACT DETAILS</a>
                     <ul>
                         <li><a href="#">© Sellhelp AB |
-                            Frihamnsgatan 56, 115 56 Stockholm</a></li>
+                                Frihamnsgatan 56, 115 56 Stockholm</a></li>
                         <li><a href="#">tel:010-1234-1234</a></li>
                         <li><a href="#">company@sellpy.com</a></li>
                     </ul>
