--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
         <div class="sellpy-mainvisual-desc">
             <h2>
                 OUT WITH THE OLD,<br>
-                IN WITH THE NEW OLD.
+                IN WITH THE <span>NEW</span> OLD.
             </h2>
-            <div class="sellpy-desc-redline"></div>
             <p>
                 더 나은 지구를 위한 지속 가능한 실천 <br>
                 SELLPY와 함께하세요
@@ -164,7 +163,7 @@
                 <a href="#"><img src="./img/twitter.png" alt="Twitter"></a>
                 <a href="#"><img src="./img/yotube.png" alt="youtube"></a>
             </div>
-            
+
         </div>
     </footer>
 </body>
