--- a/index.html
+++ b/index.html
@@ -57,17 +57,47 @@
         <div class="sellpy-contents-wrap">
             <div class="sellpy-content-divide">
                 <div class="sellpy-content contentup">
-                    <div class="sellpy-content"><a href=#"><img src="./img/img1.png" alt="img1"></a></div>
-                    <div class="sellpy-content"><a href=#"><img src="./img/img2.png" alt="img2"></a></div>
+                    <div class="sellpy-content hover-space"><a href=#"><img src="./img/img1.png" alt="img1"></a>
+                        <div class="sellpy-content-text">
+                            <p>노티드 선글라스</p>
+                            <span>56,000 ₩</span>
+                        </div>
+                    </div>
+                    <div class="sellpy-content hover-space"><a href=#"><img src="./img/img2.png" alt="img2"></a>
+                        <div class="sellpy-content-text">
+                            <p>릴렉스 코튼자켓</p>
+                            <span>183,000 ₩</span>
+                        </div>
+                    </div>
                 </div>
-                <div class="sellpy-content up"><a href=#"><img src="./img/img3.png" alt="img3"></a></div>
+                <div class="sellpy-content up hover-space"><a href=#"><img src="./img/img3.png" alt="img3"></a>
+                    <div class="sellpy-content-text">
+                        <p>레몬그린 티셔츠</p>
+                        <span>43,000 ₩</span>
+                    </div>
+                </div>
             </div>
 
             <div class="sellpy-content-divide">
-                <div class="sellpy-content"><a href=#"><img src="./img/img4.png" alt="img4"></a></div>
+                <div class="sellpy-content hover-space"><a href=#"><img src="./img/img4.png" alt="img4"></a>
+                    <div class="sellpy-content-text">
+                        <p>릴렉스라이트 니트</p>
+                        <span>93,000 ₩</span>
+                    </div>
+                </div>
                 <div class="sellpy-content contentup up">
-                    <div class="sellpy-content"><a href=#"><img src="./img/img5.png" alt="img5"></a></div>
-                    <div class="sellpy-content"><a href=#"><img src="./img/img6.png" alt="img6"></a></div>
+                    <div class="sellpy-content hover-space"><a href=#"><img src="./img/img5.png" alt="img5"></a>
+                        <div class="sellpy-content-text">
+                            <p>레더슈즈</p>
+                            <span>203,000 ₩</span>
+                        </div>
+                    </div>
+                    <div class="sellpy-content hover-space"><a href=#"><img src="./img/img6.png" alt="img6"></a>
+                        <div class="sellpy-content-text">
+                            <p>미니 가죽가방</p>
+                            <span>123,000 ₩</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -149,12 +179,12 @@
                     </ul>
                 </li>
 
-                <li><a href="#">CONTACT DETAILS</a>
+                <li>CONTACT DETAILS
                     <ul>
-                        <li><a href="#">© Sellhelp AB |
-                                Frihamnsgatan 56, 115 56 Stockholm</a></li>
-                        <li><a href="#">tel:010-1234-1234</a></li>
-                        <li><a href="#">company@sellpy.com</a></li>
+                        <li>© Sellhelp AB |
+                                Frihamnsgatan 56, 115 56 Stockholm</li>
+                        <li>tel:010-1234-1234</li>
+                        <li>company@sellpy.com</li>
                     </ul>
                 </li>
             </ul>
