--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     </div>
 
     <section class="sellpy-menu">
-        <h1><img src="./img/sellpylogo.png" alt="logo"></h1>
+        <h1><a href="./index.html"><img src="./img/sellpylogo.png" alt="logo"></a></h1>
         <ul class="sellpy-menu-lists">
-            <li><a href="#">MENS</a></li>
+            <li><a href="./sub/mens.html">MENS</a></li>
             <li><a href="#">WOMENS</a></li>
             <li><a href="#">THE BRAND</a></li>
             <li><a href="#">MAGAZINE</a></li>
@@ -48,7 +48,7 @@
                 더 나은 지구를 위한 지속 가능한 실천 <br>
                 SELLPY와 함께하세요
             </p>
-            <button>여성복 쇼핑하기</button>
+            <button type="button" >여성복 쇼핑하기</button>
         </div>
     </section>
 
