--- a/sub/mens.html
+++ b/sub/mens.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./img/favicon.png" type="image/png">
-    <link rel="stylesheet" href="../css/main.css" type="text/css">
-    <title>Sellpy-WOMENS</title>
+    <link rel="stylesheet" href="../css/sub.css" type="text/css">
+    <title>Sellpy-MENS</title>
 </head>
 
 <body>
@@ -25,17 +25,19 @@
     <section class="sellpy-menu">
         <h1><img src="../img/sellpylogo.png" alt="logo"></h1>
         <ul class="sellpy-menu-lists">
-            <li><a href="#">MENS</a></li>
-            <li><a href="#" class="on">WOMENS</a></li>
-            <li><a href="#">THE BRAND</a></li>
-            <li><a href="#">MAGAZINE</a></li>
-            <li><a href="#">LOOK BOOK</a></li>
+            <li><a href="#" class="on">MENS</a></li>
+            <li><a href="./womens.html">WOMENS</a></li>
+            <li><a href="./thebrand.html">THE BRAND</a></li>
+            <li><a href="./magazine.html">MAGAZINE</a></li>
+            <li><a href="./lookbook.html">LOOK BOOK</a></li>
         </ul>
     </section>
 
-    <section>
-        <img src="" alt="">
+    <section class="sellpy-menu-section">
+        <img src="../img/men.png" alt="bg">
     </section>
+
+
 
 </body>
 
