--- a/sub/lookbook.html
+++ b/sub/lookbook.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./img/favicon.png" type="image/png">
     <link rel="stylesheet" href="../css/sub.css" type="text/css">
-    <title>Sellpy-MENS</title>
+    <title>lookbook</title>
 </head>
 
 <body>
@@ -26,10 +26,10 @@
         <h1><img src="../img/sellpylogo.png" alt="logo"></h1>
         <ul class="sellpy-menu-lists">
             <li><a href="#" class="on">MENS</a></li>
-            <li><a href="#">WOMENS</a></li>
-            <li><a href="#">THE BRAND</a></li>
-            <li><a href="#">MAGAZINE</a></li>
-            <li><a href="#">LOOK BOOK</a></li>
+            <li><a href="./womens.html">WOMENS</a></li>
+            <li><a href="./thebrand.html">THE BRAND</a></li>
+            <li><a href="./magazine.html">MAGAZINE</a></li>
+            <li><a href="./lookbook.html">LOOK BOOK</a></li>
         </ul>
     </section>
 
